[gd_scene load_steps=8 format=3 uid="uid://vmh4xrfha0i0"]

[ext_resource type="Texture2D" uid="uid://wcece7d1sybd" path="res://root/Sprites/snowflakes.png" id="1_25yum"]
[ext_resource type="Script" path="res://root/Scripts/IceClone.gd" id="1_848ic"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nonyf"]
height = 62.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_4fpe2"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_5ytwe"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="CurveTexture" id="CurveTexture_16mq2"]
curve = SubResource("Curve_5ytwe")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_upr3l"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(15, 35, 1)
angle_max = 45.0
spread = 180.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
scale_min = 0.01
scale_max = 0.1
alpha_curve = SubResource("CurveTexture_16mq2")

[node name="IceClone" type="Node2D"]
script = ExtResource("1_848ic")

[node name="HitBoxArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
position = Vector2(0, 15)
shape = SubResource("CapsuleShape2D_nonyf")
debug_color = Color(0.364706, 0.478431, 1, 0.419608)

[node name="SnowflakeParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_4fpe2")
position = Vector2(0, 15)
amount = 50
process_material = SubResource("ParticleProcessMaterial_upr3l")
texture = ExtResource("1_25yum")
lifetime = 3.0
preprocess = 6.0

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_area_entered"]
[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
